--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
         <canvas id="gamecanvas" style="z-index:1">HTML Canvas element not supported in your browser. try chrome, dummy</canvas>
 
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/main.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/game/player.js') }}"></script>
-
+        <script type="text/javascript" src="{{ url_for('static', filename='js/game/Player.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/game/Object.js') }}"></script>
         
     </body>
 
