added player direction framework

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/main.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/Player.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/Object.js') }}"></script>
-        
+        <script type="text/javascript" src="{{ url_for('static', filename='js/game/Equipment.js') }}"></script>
+
+
     </body>
 
 </html>
