--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,11 @@
 #gamecanvas {
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     cursor: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
 };
