--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
         <title>scav.io</title>
+
     </head>
 
     <body>
@@ -22,5 +23,5 @@
 
 
     </body>
-
+        <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
 </html>
