reorganized equip framework into Containers

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     </head>
 
-    <body>
+    <body id="body">
 
         <canvas id="gamecanvas" style="z-index:1">HTML Canvas element not supported in your browser. try chrome, dummy</canvas>
 
@@ -20,6 +20,8 @@
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/Player.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/Object.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/game/Equipment.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/game/Container.js') }}"></script>
+
 
 
     </body>
